--- a/Projetos/Front-END/JavaScript/POKEDEX/index.html
+++ b/Projetos/Front-END/JavaScript/POKEDEX/index.html
@@ -30,6 +30,7 @@
     />
   </head>
   <body>
+    <a href="./details.html" class="detail"></a>
     <section class="content">
       <h1>Pokedex</h1>
 
